--- a/merger.toml
+++ b/merger.toml
@@ -1,3 +1,6 @@
 [CK2]
 modpath = "/home/parker/.paradoxinteractive/Crusader Kings II"
+
 datapath = "/home/parker/.steam/steam/steamapps/common/Crusader Kings II"
+
+valid_paths = [ "history", "common", "decisions", "events", "localisation" ]
