--- a/merger.toml
+++ b/merger.toml
@@ -1,6 +1,8 @@
 [CK2]
 modpath = "/home/parker/.paradoxinteractive/Crusader Kings II"
-
 datapath = "/home/parker/.steam/steam/steamapps/common/Crusader Kings II"
-
 valid_paths = [ "history", "common", "decisions", "events", "localisation" ]
+[EU4]
+modpath = "/home/parker/.local/share/Paradox Interactive/Europa Universalis IV"
+datapath = "/home/parker/.steam/steam/steamapps/common/Europa Universalis IV"
+valid_paths = [ "history", "common", "decisions", "events", "localisation", "missions", "hints" ]
