--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dissimilar = "1.0"
+toml = "0.5"
+zip = "0.5"
+rose_tree = "0.2"
