Now generates single mods

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ dissimilar = "1.0"
 toml = "0.5"
 zip = "0.5"
 rose_tree = "0.2"
+clap = "2"
+serde = {version = "1.0", features = ["derive"]}
+regex = "1"
