--- a/.github/workflows/rust-test.yml
+++ b/.github/workflows/rust-test.yml
@@ -17,6 +17,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cargo build
+      run: cargo build --lib
     - name: Run tests
       run: cargo test --lib --verbose
