--- a/.github/workflows/build-gui.yml
+++ b/.github/workflows/build-gui.yml
@@ -17,4 +17,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cargo build --bin merger-gui --verbose
+      run: cargo build --features gtk-interface --bin merger-gui --verbose
