--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -17,4 +17,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cargo build --bin merger-cli --verbose
+      run: cargo build --features command-line --bin merger-cli --verbose
