--- a/merger.toml
+++ b/merger.toml
@@ -3,6 +3,11 @@ modpath = "/home/parker/.paradoxinteractive/Crusader Kings II"
 datapath = "/home/parker/.steam/steam/steamapps/common/Crusader Kings II"
 valid_paths = [ "history", "common", "decisions", "events", "localisation", "gfx", "interface", "music", "soundtrack", "tutorial" ]
 valid_extensions = ["gfx","txt","csv","gui","xml"]
+[CK3]
+modpath = "/home/parker/.local/share/Paradox Interactive/Crusader Kings III"
+datapath = "/home/parker/.steam/steam/steamapps/common/Crusader Kings III"
+valid_paths = [ "history", "common", "decisions", "events", "localisation", "gfx", "interface", "music", "soundtrack", "tutorial" ]
+valid_extensions = ["gfx","txt","csv","gui","xml"]
 [EU4]
 modpath = "/home/parker/.local/share/Paradox Interactive/Europa Universalis IV"
 datapath = "/home/parker/.steam/steam/steamapps/common/Europa Universalis IV"
