Halfway to automatic default configurations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ regex = "1"
 encoding = "0.2"
 diff_match_patch = "0.1"
 lazy_static = "1.4"
-app_dirs = {version = "1.2", optional = true}
+directories = "3.0"
+linked-hash-map = "0.5"
 
 [dependencies.gtk]
 version = "0.9"
@@ -29,8 +30,8 @@ features = ["v2_44"]
 optional = true
 
 [features]
-command-line = ["clap","app_dirs"]
-gui-interface= ["gtk","gio","app_dirs"]
+command-line = ["clap"]
+gui-interface= ["gtk","gio"]
 
 [[bin]]
 name = "merger-cli"
