--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ diff_match_patch = "0.1"
 lazy_static = "1.4"
 directories = "3.0"
 linked-hash-map = "0.5"
+serde_json = "1.0"
 
 [dependencies.gtk]
 version = "0.9"
