--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ linked-hash-map = "0.5"
 serde_json = "1.0"
 vgtk = {version = "0.3", optional = true}
 pretty_env_logger = {version = "0.4", optional = true}
+fasthash = "0.4"
 
 [features]
 command-line = ["clap"]
