--- a/.github/workflows/build-gui.yml
+++ b/.github/workflows/build-gui.yml
@@ -17,6 +17,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install Deps
-      run: sudo apt install lib-gtk3.0
+      run: sudo apt install libgtk-3-dev
     - name: Build
       run: cargo build --features gtk-interface --bin merger-gui --verbose
