--- a/.github/workflows/build-gui.yml
+++ b/.github/workflows/build-gui.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Install Deps
       run: sudo apt install libgtk-3-dev
     - name: Build
-      run: cargo build --features gtk-interface --bin merger-gui --verbose
+      run: cargo build --features gui-interface --bin merger-gui --verbose
